--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
-.header ul li{
+.nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+} 
+
+.nav ul,li{
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
-    display: inline-flex ;
+    display: inline-block ; 
+    padding: 0px 10px;
 }
+
+.content {
+    display: flex;
+    justify-content: center;
+    padding: 150px;
+}
+
+
+
