--- a/style.css
+++ b/style.css
@@ -14,7 +14,45 @@
 .content {
     display: flex;
     justify-content: center;
-    padding: 150px;
+    padding: 150px 150px 30px ;
+}
+
+.searchBar{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
+input{
+    width: 550px;
+    height: 40px;
+    border-radius: 30px;
+    border: 2px solid #e7e7e7 ;
+}
+
+.btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+button {
+    text-align: center;
+    padding: 10px 15px ;
+    margin: 0 5px;
+    border-radius: 5px;
+    border: 2px solid #e7e7e7 ;
+}
+
+.footer{
+    background-color: #e7e7e7;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
 }
 
 
